# PassMan

./: .gitignore  BACKGROUND_FIX.md  CUSTOM_GIF_GUIDE.md  Cargo.toml  DESIGN_GUIDE.md  EXTENSION_ENHANCEMENT_SUMMARY.md  GIF_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  build.ps1  build.sh  create_icons.py  demo-features.md  demo.ps1  demo.sh  icon-generator.html  package.json
cli/: Cargo.toml
cli/src/: cloud.rs  db.rs  main.rs
extension/: background.js  backgrounds.css  content.js  manifest.json  popup.css  popup.html  popup.js  storage-manager-sqlite.js  wasm-loader.js
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals-backup.css  globals-new.css  globals-test.css  page.tsx
frontend/src/components/: AuthFlow.tsx  DashboardLayout.tsx  EntryForm.tsx  EntryList.tsx  PasswordGenerator.tsx  UnlockVault.tsx
frontend/src/lib/: utils.ts  vault-service.ts
frontend/src/types/: index.ts
src/: auth.rs  crypto.rs  db.rs  entry.rs  main.rs  security.rs  server.rs  vault.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
