[package]
name = "passman"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.3"
chacha20poly1305 = "0.10"
zeroize = "1.6"
rand = "0.9.2"
base64 = "0.22.1"
dirs = "6.0.0"
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
log = "0.4.27"
env_logger = "0.11.8"
hex = "0.4.3"
getrandom = "0.2"
rusqlite = { version = "0.29", features = ["bundled"] }
blake3 = "1.4"

# Web server dependencies
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }

# Authentication and sessions
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Additional security
secrecy = "0.8"
validator = { version = "0.16", features = ["derive"] }

[features]
default = ["server"]
server = []
cli-only = []

[[bin]]
name = "passman"
path = "src/main.rs"

[[bin]]
name = "passman-server"
path = "src/server.rs"
required-features = ["server"]
