[package]
name = "passmann-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Shared library for common crypto and data structures
passmann-shared = { path = "../shared" }

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.0"
dirs = "6.0.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15"

# Database for local storage
rusqlite = { version = "0.29", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }

# Additional CLI utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
blake3 = "1.4"
base64 = "0.22.1"
colored = "2.0"
indicatif = "0.17"
