[package]
name = "passmann-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
argon2 = "0.5.3"
chacha20poly1305 = "0.10"
base64 = "0.22.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CryptoKey",
  "SubtleCrypto",
  "Window"
]
